[gd_scene load_steps=2 format=3 uid="uid://dr44rkqgqfyrq"]

[ext_resource type="Script" path="res://addons/Mushroom/DialogManager/Editor/Scripts/EnterNameScene.gd" id="1"]

[node name="EnterNameScene" type="Window" node_paths=PackedStringArray("ok", "cancel", "line_edit")]
size = Vector2i(218, 141)
exclusive = true
script = ExtResource("1")
ok = NodePath("VBoxContainer/HBoxContainer/OK")
cancel = NodePath("VBoxContainer/HBoxContainer/Cancel")
line_edit = NodePath("VBoxContainer/LineEdit")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 1

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
caret_blink = true
caret_blink_interval = 0.5

[node name="Control2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../LineEdit")
focus_neighbor_right = NodePath("../OK")
text = "Cancel"

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OK" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Cancel")
focus_neighbor_top = NodePath("../../LineEdit")
text = "OK"

[connection signal="text_changed" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/OK" to="." method="_on_ok_pressed"]
